--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
             <div class="model-config-card">
                 <div class="row g-3">
                     <div class="col-md-4">
-                        <label for="model-select" class="form-label">
-                            <i class="bi bi-cpu me-2"></i>LLM Model
-                        </label>
+                        <label for="model-select" class="form-label"><i class="bi bi-cpu me-2"></i>LLM Model</label>
                         <select id="model-select" class="form-select model-select">
                             <optgroup label="OpenAI">
                                 <option value="gpt-3.5-turbo" selected>GPT-3.5 Turbo</option>
@@ -41,17 +39,13 @@
                             </optgroup>
                             <optgroup label="Anthropic">
                                 <option value="claude-3-sonnet">Claude 3 Sonnet</option>
-                                <option value="claude-3-haiku">Claude 3 Haiku</option>
-                                <option value="claude-3-opus">Claude 3 Opus</option>
                             </optgroup>
                         </select>
                     </div>
                     <div class="col-md-6">
-                        <label for="api-key-input" class="form-label">
-                            <i class="bi bi-key me-2"></i>API Key
-                        </label>
+                        <label for="api-key-input" class="form-label"><i class="bi bi-key me-2"></i>API Key</label>
                         <input type="password" id="api-key-input" class="form-control api-key-input" 
-                               placeholder="Enter your API key (OpenAI, Google, or Anthropic)">
+                               placeholder="Enter your API key...">
                     </div>
                     <div class="col-md-2 d-flex align-items-end">
                         <div class="connection-status" id="connection-status">
@@ -65,11 +59,34 @@
 
         <!-- Main Chat Card -->
         <div class="chat-card card flex-grow-1">
-            <div class="card-header d-flex align-items-center">
-                <i class="bi bi-robot me-2 fs-4"></i>
-                <h5 class="mb-0">Multi-Tool AI Agent</h5>
+            <div class="card-header d-flex align-items-center justify-content-between">
+                <h5 class="mb-0 d-flex align-items-center">
+                    <i class="bi bi-diagram-3 me-2 fs-4"></i>
+                    Vectra
+                </h5>
+                <!-- NEW: New Chat Button -->
+                <button id="new-chat-btn" class="btn btn-sm">
+                    <i class="bi bi-plus-lg me-1"></i> New Chat
+                </button>
             </div>
             <div id="chat-window" class="card-body">
+                <div id="example-prompts" class="marquee">
+                    <div class="marquee-content">
+                        <div class="prompt-btn" data-prompt="Latest breakthroughs in AI technology">🚀 What's new in Tech?</div>
+                        <div class="prompt-btn" data-prompt="Top universities for computer science">🎓 Best CS Universities</div>
+                        <div class="prompt-btn" data-prompt="Best places to travel in Japan">✈️ Travel to Japan</div>
+                        <div class="prompt-btn" data-prompt="Future of renewable energy">💡 Renewable Energy Trends</div>
+                        <div class="prompt-btn" data-prompt="How do online courses work?">📚 How do online courses work?</div>
+                        <div class="prompt-btn" data-prompt="Hidden gems in Southeast Asia">🌏 Hidden Gems in Asia</div>
+                        <!-- Duplicate for seamless scroll -->
+                        <div class="prompt-btn" data-prompt="Latest breakthroughs in AI technology">🚀 What's new in Tech?</div>
+                        <div class="prompt-btn" data-prompt="Top universities for computer science">🎓 Best CS Universities</div>
+                        <div class="prompt-btn" data-prompt="Best places to travel in Japan">✈️ Travel to Japan</div>
+                        <div class="prompt-btn" data-prompt="Future of renewable energy">💡 Renewable Energy Trends</div>
+                        <div class="prompt-btn" data-prompt="How do online courses work?">📚 How do online courses work?</div>
+                        <div class="prompt-btn" data-prompt="Hidden gems in Southeast Asia">🌏 Hidden Gems in Asia</div>
+                    </div>
+                </div>
                 <div class="message agent">Hello! How can I assist you today?</div>
                 <div id="typing-indicator" class="message agent d-none">
                     <div class="typing-dot"></div>
@@ -79,25 +96,28 @@
             </div>
             <div class="card-footer">
                 <div id="alert-container" class="px-3"></div>
+                <div id="file-preview-container" class="p-3 d-none">
+                    <div class="file-preview">
+                        <img id="preview-image" src="#" alt="Image preview"/>
+                        <button id="remove-file-btn" class="btn-close"></button>
+                    </div>
+                </div>
                 <form id="chat-form" class="p-3">
                     <div class="input-group">
-                        <input type="text" id="user-input" class="form-control" placeholder="Ask the agent anything..." required autocomplete="off">
-                        <button type="submit" class="btn btn-primary">
-                            <i class="bi bi-send-fill"></i>
-                        </button>
+                        <button type="button" id="attach-file-btn" class="btn btn-secondary"><i class="bi bi-paperclip"></i></button>
+                        <input type="file" id="file-input" class="d-none" accept="image/jpeg, image/png, image/webp, image/gif">
+                        <input type="text" id="user-input" class="form-control" placeholder="Ask Vectra..." required autocomplete="off">
+                        <button type="submit" class="btn btn-primary"><i class="bi bi-send-fill"></i></button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
 
-    <!-- Bootstrap JS -->
+    <!-- JS Files -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Your JavaScript files -->
     <script src="js/config.js"></script>
     <script src="js/tools.js"></script>
     <script src="js/main.js"></script>
-    
 </body>
 </html>
