--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                             <optgroup label="Google Gemini">
                                 <option value="gemini-1.5-flash">Gemini 1.5 Flash</option>
                                 <option value="gemini-2.5-flash">Gemini 2.5 Flash</option>
+                                <option value="gemini-2.5-pro">Gemini 2.5 Pro</option>
                             </optgroup>
                             <optgroup label="Anthropic">
                                 <option value="claude-3-sonnet">Claude 3 Sonnet</option>
