--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                         <select id="model-select" class="form-select model-select">
                             <optgroup label="OpenAI">
                                 <option value="gpt-3.5-turbo" selected>GPT-3.5 Turbo</option>
+                                <option value="gpt-4-turbo">GPT-4 Turbo</option>
                             </optgroup>
                             <optgroup label="Google Gemini">
                                 <option value="gemini-1.5-flash">Gemini 1.5 Flash</option>
